apps/platform/docker-registry/base/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: platform-registry
  labels:
    platform.jaccloud.nl/managed-by: argocd
    platform.jaccloud.nl/tenant: platform
    platform.jaccloud.nl/service: docker-registry
