apps/platform/docker-registry/base/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: docker-registry
spec:
  type: ClusterIP
  ports:
    - name: https
      port: 5000
      targetPort: 5000
      protocol: TCP
  selector:
    app.kubernetes.io/name: docker-registry
