apps/platform/docker-registry/base/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docker-registry
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: docker-registry.dev.jac.dot
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docker-registry
                port:
                  number: 5000
